AG-8094 - Fix `addNonBreakingSpaceBetweenLastWords()` issue, fix docs video page vertical alignment issue

--- a/grid-packages/ag-grid-docs/documentation/src/components/LearningVideos.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/LearningVideos.module.scss
@@ -60,6 +60,11 @@
         }
     }
 
+    // Adding extra specificity to deal with .ag-styles issues
+    .body ul {
+        margin-bottom: 0 !important; // !important for .ag-styles specificity
+    }
+
     li {
         color: var(--text-color);
 
